Fixed some alignment issue with content buttons on mobile.

--- a/src/less/index-desktop.less
+++ b/src/less/index-desktop.less
@@ -27,6 +27,7 @@
                 -webkit-transform: translateY(-50%);
 
                 button {
+                    display: block;
                     margin: 30px 0;
                 }
             }
@@ -84,6 +85,7 @@
                 }
 
                 button {
+                    display: block;
                     margin: 30px 0;
                 }
             }
