--- a/src/less/index-mobile.less
+++ b/src/less/index-mobile.less
@@ -19,7 +19,8 @@
                 text-align: center;
 
                 button {
-                    margin: 30px auto 60px;
+                    display: inline-block;
+                    margin: 10px 0 0;
                 }
             }
 
@@ -56,7 +57,8 @@
                 }
 
                 button {
-                    margin: 30px auto 60px;
+                    display: inline-block;
+                    margin: 10px 0 0;
                 }
             }
         }
