--- a/src/less/index-tablet.less
+++ b/src/less/index-tablet.less
@@ -19,6 +19,7 @@
                 text-align: center;
 
                 > button {
+                    display: block;
                     margin: 30px auto 60px;
                 }
             }
@@ -62,6 +63,7 @@
                 }
 
                 > button {
+                    display: block;
                     margin: 30px 0;
                 }
             }
