--- a/src/less/index.less
+++ b/src/less/index.less
@@ -335,7 +335,6 @@ header {
             }
 
             > button {
-                display: block;
                 cursor: pointer;
             }
         }
@@ -440,7 +439,6 @@ header {
             }
 
             > button {
-                display: block;
                 cursor: pointer;
             }
 
